# lendingclub-default

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-leakage-allowlist.md  0002-temporal-vintage-split.md  0003-calibration.md  0004-synthetic-demo-data-honesty.md  0005-delong-overfitting.md
src/lendingclub_default/: __init__.py  _constants.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  plots.py  train.py
src/lendingclub_default/artifacts/: booster.json  calibration.json  manifest.json  pipeline.joblib
src/lendingclub_default/data/: __init__.py  labels.py  leakage.py  load.py  split.py  synthetic.py
src/lendingclub_default/evaluation/: __init__.py  calibration.py  delong.py  metrics.py  threshold.py
src/lendingclub_default/features/: __init__.py  pipeline.py
src/lendingclub_default/models/: __init__.py  baselines.py  calibrate.py  reason_codes.py  xgb.py
tests/: conftest.py
tests/integration/: test_cli_group.py  test_train_score_roundtrip.py
tests/parity/: test_metrics_parity.py
tests/property/: test_evaluation_invariants.py  test_invariants.py  test_pipeline.py
tests/regression/: test_temporal_and_golden.py
tests/unit/: test_data_group.py  test_dataclasses.py  test_infra.py  test_models_group.py  test_orchestration_group.py  test_plots_group.py  test_smoke.py  test_validation_and_pipeline_paths.py
